--- a/HW3.Rmd
+++ b/HW3.Rmd
@@ -4,17 +4,21 @@ author: "MariaRomanova"
 output: pdf_document
 ---
 ```{r}
-work_with_dataset_2 <- function(data, rows, columns, operation) {
-  subsetting    <- data.frame(data[rows, columns])
+work_with_dataset_2 <- function(data, rows, columns, operation,splitting) {
+  data <- split(data, splitting)[2]
+  subsetting    <- as.data.frame(data)[rows, columns, drop = F]
   num_operation <- function(x, operation) {
     if (is.numeric(x)) {
       return(operation(x))
     } else {
-      return(table(x))
+      return(summary(x))
     }
   }
   calculate <- sapply(subsetting, num_operation, operation)
   return(list(subsetting, calculate))
 }
 ```
-
+```{r}
+df <- datasets::Orange
+work_with_dataset_2(df, 1:3,2:3,sum, Orange$Tree==2)
+```
